@@ -45,9 +45,9 @@ See the manual Rvmmin.Rd for details.
 
    The \code{control} argument is a list.
    \describe{
-   \item{maxit}{A limit on the number of iterations (default 500). Note that this is 
-      used to compute a quantity \code{maxfeval}<-round(sqrt(n+1)*maxit) where n is the
-      number of parameters to be minimized.}
+   \item{maxit}{A limit on the number of iterations (default 500). This is the
+	maximum number of gradient evaluations allowed.}
+   \item{maxfevals}{A limit on the number of function evaluations allowed (default 3000).}
    \item{trace}{Set 0 (default) for no output, >0 for trace output
       (larger values imply more output).}
    \item{\code{dowarn}}{= TRUE if we want warnings generated by optimx. Default is 
